--- a/arch/arm64/configs/xiaomi/xiaomi.config
+++ b/arch/arm64/configs/xiaomi/xiaomi.config
@@ -5,7 +5,7 @@
 #
 
 # General setup
-CONFIG_LOCALVERSION="-lineageos"
+#CONFIG_LOCALVERSION="-lineageos"
 
 # Input Device Drivers
 CONFIG_INPUT_FINGERPRINT=y
