arch: arm64: configs: xiaomi: Enable CONFIG_LOCALVERSION_AUTO

--- a/arch/arm64/configs/xiaomi/xiaomi.config
+++ b/arch/arm64/configs/xiaomi/xiaomi.config
@@ -5,7 +5,7 @@
 #
 
 # General setup
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION_AUTO=y
 
 # Android
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
