arch: arm64: configs: xiaomi: Stop CONFIG_LOCALVERSION_AUTO and Enable CONFIG_UNAME_OVERRIDE

--- a/arch/arm64/configs/xiaomi/xiaomi.config
+++ b/arch/arm64/configs/xiaomi/xiaomi.config
@@ -5,7 +5,10 @@
 #
 
 # General setup
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION_AUTO=n
+CONFIG_UNAME_OVERRIDE=y
+CONFIG_UNAME_OVERRIDE_TARGET="com.google.android.gms"
+CONFIG_UNAME_OVERRIDE_STRING="3.18.124-perf-g48df2b1"
 
 # Android
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
