arch: arm64: configs: xiaomi: Enable CONFIG_UNAME_OVERRIDE

--- a/arch/arm64/configs/xiaomi/xiaomi.config
+++ b/arch/arm64/configs/xiaomi/xiaomi.config
@@ -6,6 +6,9 @@
 
 # General setup
 #CONFIG_LOCALVERSION="-lineageos"
+CONFIG_UNAME_OVERRIDE=y
+CONFIG_UNAME_OVERRIDE_TARGET="com.google.android.gms"
+CONFIG_UNAME_OVERRIDE_STRING="3.18.124-perf-g48df2b1"
 
 # Input Device Drivers
 CONFIG_INPUT_FINGERPRINT=y
